--- a/templates/news/home.html
+++ b/templates/news/home.html
@@ -1,5 +1,6 @@
 {% extends "news/base.html" %}
 {% load static %}
+{% load hitcount_tags %}
 
 {% block title %} Bosh Sahifa {% endblock title %}
 {% block content %}
@@ -26,7 +27,13 @@
                 {% for news in news_list %}
               <li>
                 <div class="media"> <a href="{{ news.get_absolute_url }}" class="media-left"> <img src="{{ news.image.url }}" alt="" > </a>
-                  <div class="media-body"> <a href="{{ news.get_absolute_url }}" class="catg_title">{{ news.title }}</a> </div>
+                  <div class="media-body"> <a href="{{ news.get_absolute_url }}" class="catg_title">{{ news.title }}</a>
+                   <p>
+                       {% get_hit_count for news as hit_count %} Ko'rilganlar soni:
+                      <i class="fa-solid fa-eye" aria-hidden="true"></i>
+                      {{ hit_count }}
+                   </p>
+                  </div>
                 </div>
               </li>
                  {% endfor %}
@@ -51,6 +58,11 @@
                           <figure class="bsbig_fig"> <a href="{{ mahalliy.get_absolute_url }}" class="featured_img"> <img alt="" src="{{ mahalliy.image.url }}"> <span class="overlay"></span> </a>
                             <figcaption> <a href="{{ mahalliy.get_absolute_url }}">{{ mahalliy.title | truncatewords:5 }}</a> </figcaption>
                             <p>{{ local.title }}</p>
+                            <p>
+                               {% get_hit_count for mahalliy as hit_count %} Ko'rilganlar soni:
+                              <i class="fa-solid fa-eye" aria-hidden="true"></i>
+                              {{ hit_count }}
+                           </p>
                           </figure>
                         </li>
                       {% endif %}
@@ -63,7 +75,13 @@
                       {% if forloop.counter > 1 %}
                         <li>
                           <div class="media wow fadeInDown"> <a href="{{ mahalliy.get_absolute_url }}" class="media-left"> <img alt="" src="{{ mahalliy.image.url }}"> </a>
-                            <div class="media-body"> <a href="{{ mahalliy.get_absolute_url }}" class="catg_title">{{ mahalliy.title }}</a> </div>
+                            <div class="media-body"> <a href="{{ mahalliy.get_absolute_url }}" class="catg_title">{{ mahalliy.title }}</a>
+                                <p>
+                                     {% get_hit_count for mahalliy as hit_count %} Ko'rilganlar soni:
+                                    <i class="fa-solid fa-eye" aria-hidden="true"></i>
+                                    {{ hit_count }}
+                                 </p
+                            </div>
                           </div>
                         </li>
                       {% endif %}
